--- a/CANSniffer/Resources/layout/Main.axml
+++ b/CANSniffer/Resources/layout/Main.axml
@@ -15,5 +15,8 @@
         android:minHeight="25px"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/pingListView" />
+        android:id="@+id/pingListView"
+        android:transcriptMode="alwaysScroll"
+        android:stackFromBottom="true"
+        android:fastScrollEnabled="true" />
 </LinearLayout>
